Overflow X on Admin place bug fixed

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -72,7 +72,7 @@ header .account-preview .initials.inclusive {
   font-size: 11pt;
 }
 header .account-preview .full-name {
-  width: 10vw;
+  width: 5vw;
   margin-top: 0.5vh;
   background-color: rgba(0, 0, 0, 0.658);
   color: #fff;
